<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".fragments.EditorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/dark_blue"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/back"
                    android:text="@string/add" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_image_24"
            android:background="@drawable/rounded_image_view"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/textView2"
            style="@style/edit_custom_text_view"
            android:layout_marginTop="30dp"
            android:text="@string/produc_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_image" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:cardCornerRadius="20dp"
            app:cardElevation="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            style="@style/default_edit_card_view">

            <EditText
                android:id="@+id/product_name"
                android:hint="@string/print_product_name"
                style="@style/default_edit_edit_text" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            style="@style/edit_custom_text_view"
            android:layout_marginTop="20dp"
            android:text="@string/product_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            style="@style/default_edit_card_view"
            app:cardCornerRadius="20dp"
            app:cardElevation="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <EditText
                android:id="@+id/price"
                style="@style/default_edit_edit_text"
                android:hint="@string/print_product_price"
                android:inputType="number" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            style="@style/edit_custom_text_view"
            android:layout_marginTop="20dp"
            android:text="@string/supplier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            style="@style/default_edit_card_view"
            app:cardCornerRadius="20dp"
            app:cardElevation="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <EditText
                android:id="@+id/supplier"
                style="@style/default_edit_edit_text"
                android:hint="@string/print_supplier"
                android:inputType="text" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView5"
            style="@style/edit_custom_text_view"
            android:layout_marginTop="20dp"
            android:text="@string/quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            style="@style/default_edit_card_view"
            app:cardCornerRadius="20dp"
            app:cardElevation="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <EditText
                android:id="@+id/quantity"
                style="@style/default_edit_edit_text"
                android:hint="@string/quantity"
                android:inputType="number" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:layout_marginTop="40dp"
            android:text="Добавить"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:padding="10dp"
            android:text="Отмена"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>